# cKNOTs

./: .gitignore  Dockerfile  README.md  cknots.py  cknots_preprocessing.py  docker_cknots.sh  example.ipynb  preprocessing_cknots.py  requirements.txt  slurm_cknots.py
cknots/: config.py
cknots/analysis/: README.md  __init__.py  ccd.py  cell_line.py  chromosome.py  link.py  utils.py
cknots/cknots/: computation_scheduler.py  run_docker.py  run_local.py
cknots/cpp/: README.md
cknots/cpp/src/: README.md
cknots/cpp/src/minor-finder/: CMakeLists.txt
cknots/cpp/src/minor-finder/src/: find-k6-linear.cpp  find-knots.cpp  graph.h  k6finder.h  minorfinder.cpp  minorfinder.h  namesdict.h  parse_raw.cpp  path-decomposition.cpp  pathdecomp.h  tools.h
cknots/cpp/src/splitter/: CMakeLists.txt  splitter.cpp
cknots/preprocessing/: motif_orientation.py  pet_filter.py
requirements/: requirements.txt
